# shieldpilot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE_HEADER.txt  README.md  SECURITY.md  alembic.ini  docker-compose.yml  fly.toml  index.html  mkdocs.yml  pyproject.toml  sentinel.example.yaml  sentinel.yaml  sitemap.xml  start_server.sh  test_launch_ready.py
.claude/: settings.json
.claude/agents/: README.md  backend-dev.md  daily-planner.md  debate-checklist.md  devops-engineer.md  frontend-dev.md  qa-engineer.md  requirements-engineer.md  solution-architect.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  (+1 more)
BILLING/: index.html
OS_MATRIX/: index.html
dispatch-setup/: CLAUDE.md  DISPATCH-INSTRUCTIONS.md  DISPATCH-PASTE-THIS.md  INSTALL.md  SETUP-GUIDE.md  SHIELDPILOT-CONTEXT.md  TASK-TEMPLATES.md  change-log.md
docs/: BILLING.md  CNAME  OS_MATRIX.md  api-reference.md  cli-reference.md  configuration.md  contributing.md  getting-started.md  index.md  mcp-scanner.md  prompt-injection.md  supply-chain.md
features/: ADVERSARIAL-SECURITY-AUDIT.md  COVERAGE-REPORT.md  DAILY-PLAN.md  DESIGN-GUIDE.md  DETAILED-TASK-BREAKDOWN.md  FULL-AUDIT-REPORT.md  LAUNCH-READY-BREAKDOWN.md  LAUNCH-TRACKER.md  LEARNING-PLAN.md  MASTERPLAN.md  PHASE-8-QA-REPORT.md  PHASE-9-QA-REPORT.md  PRICING-3TIER.md  PROJECT-BOARD.md  ROADMAP.md  SECURITY-AUDIT-ROUND2.md  SKILLS-QA-REPORT.md  UNIFIED-ROADMAP.md  WAVE-3-6-BREAKDOWN.md
launch/: 01-hackernews.md  02-producthunt.md  03-reddit-python.md  04-reddit-claudeai.md  05-reddit-cybersecurity.md  06-reddit-machinelearning.md  07-linkedin.md  08-twitter-thread.md  09-demo-video-script.md  10-launch-checklist.md  cv-max-walser.md
scripts/: backup.sh  restore.sh
search/: search_index.json
sentinelai/: __init__.py
stylesheets/: extra.css
tests/: __init__.py  _test_usage_live.py  audit_ml_leakage.py  build_training_mix.py  build_training_mix_v3.py  conftest.py  dataset.txt  eval_generated_dataset.py  eval_new_sets.py  eval_presupposition.py  eval_state_spoofing.py  eval_stealth_injection.py  eval_user_suggested.py  generate_10k.py  generate_clean_shell_commands.py  generate_hard_holdout_boosters.py  generate_hard_negatives.py  generator.py  integration_test_injection.py  ood_sanity_check.py  quick_ml_test.py  scan_training_set.py  test_active_learning_log.py  test_adversarial.py  test_adversarial_round2.py  test_analyze_logs.py  test_clean_shell_generator.py  test_config.py  test_fp_fixes_2026_06_11.py  test_gaps.py  test_hard_negative_generator.py  test_licensing.py  test_local_first.py  test_ml_classifier.py  test_ml_eval_smoke.py  test_ml_rollout_modes.py  test_ml_smoke_cases.py  test_ml_stage.py  test_ml_telemetry.py  test_new_patterns.py  (+6 more)
(+263 files in other folders)
